[project]

name = "glib-2_0-sys"
version = "0.1.2"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
description = "Import crate for GLib"
license = "LGPL-2.1+"
readme = "README.md"
keywords = ["GLib", "GNOME"]

repository = "https://github.com/gi-rust/glib-sys.git"

build = "build.rs"
links = "glib-2.0"

[dependencies]
libc = "0.1"

[build-dependencies]
pkg-config = "0.3"
